# cloud-billing

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-core.txt  requirements.txt  vercel.json
.github/workflows/: docs.yml  jekyll-gh-pages.yml  publish-pypi.yml  publish.yml  pytest.yml
api/: index.py
api/templates/: index.html
aws_cloud/: client.py
cloud_billing/: __init__.py
cloud_billing/alibaba_cloud/: __init__.py  client.py  exceptions.py  k8s_billing_client.py  types.py  utils.py
cloud_billing/aws_cloud/: __init__.py  client.py  types.py
cloud_billing/azure_cloud/: __init__.py  client.py  types.py
cloud_billing/common/: utils.py
cloud_billing/huawei_cloud/: __init__.py  client.py  types.py
cloud_billing/kubecost/: __init__.py  client.py  types.py
docs/: CNAME  contributing.md  examples.md  examples_kubecost.md  index.md  scripts_export_csv.md
docs/api/: alibaba-cloud.md  aws.md  azure.md  common.md  huawei-cloud.md
docs/getting-started/: installation.md  quickstart.md
docs/providers/: alibaba-cloud.md  aws.md  azure.md  huawei-cloud.md
scripts/: export_billing_to_csv.py  get_kubecost_allocation.py  serve-docs.sh
tests/: __init__.py  conftest.py  test_alibaba_client.py  test_alibaba_utils.py  test_aws_client.py  test_azure_client.py  test_common_utils.py  test_huawei_client.py  test_kubecost_client.py
