[project]
name = "cloud-billing"
version = "0.1.25"
description = "Multi-cloud billing data retrieval SDK for Alibaba Cloud, AWS, Azure, and Huawei Cloud with unified API"
authors = [
    {name = "Kai Yang", email = "kaiyang939325@gmail.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "cloud",
    "billing",
    "alibaba-cloud",
    "aws",
    "azure",
    "huawei-cloud",
    "cost-management",
    "finops",
]
dependencies = [
    "aliyun-python-sdk-core>=2.16.0,<3.0.0",
    "boto3>=1.35.0,<2.0.0",
    "huaweicloudsdkbss>=3.1.0,<4.0.0",
    "huaweicloudsdkcore>=3.1.0,<4.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0,<2.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "twine>=6.0.0",
]
saas = [
    "fastapi>=0.117.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.urls]
Homepage = "https://github.com/visionary-future/cloud-billing"
Repository = "https://github.com/visionary-future/cloud-billing"
Issues = "https://github.com/visionary-future/cloud-billing/issues"

[tool.poetry]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.1.0"
pytest-xdist = "^3.8.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.18"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.17.0"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "dist*", "build*", "api*", "scripts*", "docs*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
